2005-11-16  Russell Bryant  <russell@digium.com>

	* Makefile: Fix the output of Makefile generated variables to doxygen

	* channels/chan_sip.c: Add missing carriage return and line feed to the SDP line indicating that we don't support VAD (issue #5780)

2005-11-16  Kevin P. Fleming  <kpfleming@digium.com>

	* Asterisk 1.2.0 released.
	
2005-11-16  Jeremy McNamara <jj@nufone.net>

	* apps/app_voicemail.c (load_config): do not terminate asterisk if no voicemail config file
	* channels/chan_skinny:  Don't register channel type until ready, code formatting updates

2005-11-16  Josh Roberson <josh@asteriasgi.com>

	* Makefile:  Update to fix non-responsive remote console on Darwin (OSX)(issue #5757)

2005-11-16  Kevin P. Fleming  <kpfleming@digium.com>

	* channels/Makefile: don't build chan_modem and sub-modules by default
	* configs/modules.conf.sample: explicitly 'noload' chan_modem.so and submodules, in case old versions exist
	
	* res/Makefile: issue mpg123 not-installed warning at 'make install' time, not 'make'

	* apps/app_forkcdr.c (forkcdr_exec): issue warning (and don't segfault) if ForkCDR is called on a channel that doesn't have a CDR (issue #5763)

	* channel.c (ast_queue_hangup): ensure that the channel lock is held before changing its fields... (issue #5770)

	* res/res_musiconhold.c: don't spit out incorrect log messages (and leak memory) during reload (issue #5766)

	* channels/chan_sip.c (process_sdp): don't pass video codec number into ast_getformatname(), it is not valid input for that function (issue #5764)

	* pbx/pbx_ael.c (match_assignment): properly parse equal signs surrounded by whitespace (issue #5761)

	* doc/README.realtime: document the limitations of using FreeTDS with Realtime (issue #5767)

2005-11-15  Kevin P. Fleming  <kpfleming@digium.com>

	* Makefile: use -g3 for compiler to include macro information for debugger
